--- a/car.html
+++ b/car.html
@@ -1,1 +1,248 @@
-hello
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="UTF-8">
+		<title></title>
+		<link rel="stylesheet" href="css/gol.css" />
+		<link rel="stylesheet" href="css/car.css" />
+
+	</head>
+
+	<body>
+		<div class="w">
+			<div class="header">
+				<div class="left"></div>
+				<div class="center">
+					<ul>
+						<li><a href="#">积分商城</a><a>|</a></li>
+						<li><a href="#">礼品卡</a><a>|</a></li>
+						<li><a href="#">在线客服</a><a>|</a></li>
+
+					</ul>
+					<ul>
+						<li>
+							<a href="#">English</a><img src="img/sj.png" alt="" />
+						</li>
+						<hr />
+						<li><a href="#">简易版</a></li>
+						<hr />
+						<li><a href="#">繁体版</a></li>
+					</ul>
+				</div>
+				<div class="right">
+					<ul>
+						<li></li>
+					</ul>
+					<ul>
+						<li><a href="#">小程序</a></li>
+						<li><a href="#">体验更轻盈</a></li>
+						<li class="ewm">
+							<img src="img/p_s.png" alt="" />
+							<img src="img/p_ewm.png" alt="" />
+						</li>
+					</ul>
+
+					<ul>
+						<li><img src="img/p.png" alt="" /></li>
+					</ul>
+					<ul>
+						<li><a href="#">手机版</a></li>
+						<li><a href="#">专享5折起</a></li>
+						<li class="ewm">
+
+							<img src="img/p_2.png" alt="" />
+						</li>
+					</ul>
+					<ul>
+						<li></li>
+					</ul>
+					<ul>
+						<li><a href="#">7×24 客服电话</a></li>
+						<li><a href="#">4009-333-333</a>&nbsp;<img src="img/phone.png" alt="" /></li>
+						<li class="ewm">
+
+							<img src="img/p_3.png" alt="" />
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<!--头部完成-->
+
+		<div class="banner">
+			<div class="w">
+				<div class="left">
+					<ul>
+
+						<li><a href="home.html" title="艺龙旅行网">首页</a></li>
+						<li><a href="index.html" title="酒店预订">国内酒店</a></li>
+						<i class="one"></i>
+						<li><a href="#" title="国际酒店">国际酒店</a></li>
+
+						<li><a href="#" title="短租公寓">短租公寓</a></li>
+						<i class="two"></i>
+						<li><a href="#" title="机票">机票</a></li>
+						<li><a href="ticket.html" title="火车票">火车票</a></li>
+						<i class="three"></i>
+						<li style="background: #003679;color:#fff"><a href="car.html" title="汽车票">汽车票</a></li>
+						<li><a href="#" title="旅游指南">旅游指南</a></li>
+					</ul>
+				</div>
+				<div class="right">
+					<ul>
+						<li><a href="login.html">登录</a><a>|</a></li>
+						<li><a href="register.html">注册</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<!--完成-->
+
+		<div class="ticket">
+			<span><</span>
+			<p>汽车票</p>
+		</div>
+
+		<!--完成-->
+		<div class="show">
+			<img src="img/ticket/car1.jpg" alt="" />
+		</div>
+		<!--完成-->
+
+		<div class="notice">
+			通知：三月1日起全国汽车实行实名制乘车
+		</div>
+
+		<!--完成-->
+
+		<div class="box">
+			<div class="top">
+				<div class="top1">
+					<ul>
+						<li>出发</li>
+						<li>北京</li>
+					</ul>
+					<img src="img/ticket/tic1.png" alt="" />
+
+					<ul>
+						<li>到达</li>
+						<li>上海</li>
+					</ul>
+				</div>
+
+				<div class="top2">
+					<p>出发日期</p>
+					<p>9月12日 <span>今天</span></p>
+				</div>
+
+			</div>
+			<div class="bot">
+				<div class="bottom">
+					<div class="search">
+						<img src="img/ticket/tic3.png" alt="" />
+						<span>查询</span>
+					</div>
+					<div class="clear">
+						<fieldset>
+							<legend>最近查询</legend>
+						</fieldset>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<!--完成-->
+		
+		
+		<div class="query">
+			<ul>
+				<li><img src="img/ticket/order.png" alt="" /></li>
+				<li>预定需知</li>
+			</ul>
+			<ul>
+				<li><img src="img/ticket/query.png" alt="" /></li>
+				<li>查看订单</li>
+			</ul>
+		</div>
+		<!--完成-->
+
+		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		<div class="footer">
+			<div class="w">
+				<ul>
+					<li style="font-size: 18px;">
+						<a href="#" style="border-left: 3px solid #5d96c7;" class="jia"></a><a href="#">加盟合作</a></li>
+					<li><a href="#">酒店加盟 </a></li>
+					<li><a href="#">开放平台 </a></li>
+					<li><a href="#"> 代理合作 </a></li>
+					<li><a href="#">广告服务 </a></li>
+					<li><a href="#">商家中心</a></li>
+				</ul>
+
+				<ul>
+					<li style="font-size: 18px;">
+						<a href="#" style="border-left: 3px solid #5d96c7;" class="jia"></a><a href="#">关于艺龙</a></li>
+					<li><a href="#">酒店大全 </a></li>
+					<li><a href="#">国际酒店 </a></li>
+					<li><a href="#"> 校园招聘 </a></li>
+					<li><a href="#">联系我们 </a></li>
+
+				</ul>
+				<ul>
+					<li style="font-size: 18px;"><a href="#" style="border-left: 3px solid #5d96c7;"><a href="#">艺龙APP下载</a></li>
+					<li>
+						<a href="#"> <img src="img/footer1.png" alt="" style="margin-top: 4%;" /></a>
+					</li>
+
+				</ul>
+				<ul>
+					<li style="font-size: 18px;"><a href="#" style="border-left: 3px solid #5d96c7;"><a href="#">艺龙官方微信</a></li>
+					<li>
+						<a href="#"> <img src="img/footer2.png" alt="" style="margin-top: 4%;" /></a>
+					</li>
+
+				</ul>
+				<ul>
+					<li style="font-size: 18px;"><a href="#" style="border-left: 3px solid #5d96c7;"><a href="#">艺龙官方小程序</a></li>
+					<li>
+						<a href="#"><img src="img/footer3.png" alt="" style="margin-top: 4%;" /> </a>
+					</li>
+
+				</ul>
+			</div>
+
+		</div>
+
+		<!--footer2完成-->
+
+		<div class="foo">
+			<p>© 1999 - 2017 艺龙网信息技术（北京）有限公司, eLong, Inc or its affiliates. All Rights Reserved. 京ICP证010011号 京公网安备11010502026059号</p>
+			<div class="foo1">
+				<i class="first"></i>
+				<i class="second"></i>
+				<i class="third"></i>
+				<i class="four"></i>
+				<i class="five"></i>
+				<i class="six"></i>
+			</div>
+
+		</div>
+
+	</body>
+
+</html>
